--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="css/llamada.css" rel="stylesheet">
     <link href="css/base.css" rel="stylesheet">
     <link href="css/destacados.css" rel="stylesheet">
-    <link href="Css/diferenciales.css" rel="stylesheet">
+    <link href="css/diferenciales.css" rel="stylesheet">
     <link href="css/sobre-nosotros.css" rel="stylesheet">
     <link href="css/planes.css" rel="stylesheet">
     <link href="css/contacto.css" rel="stylesheet">
